--- a/index.html
+++ b/index.html
@@ -9,19 +9,46 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
              <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Jhankar</span> website</h1>
+            <h1><span class="orange-highlight">Jhankar</span> website</h1>
             <h3>World-class professonal web developer</h3>
             <p>I am a student. I wish, I would have a doctor. But in this time, its not possible for me. Because 
             already compelet my academic study.AT this time I want to be a web developer.I will not stop my 
              mission untill I become the web developer. </p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/ambia-kobir-1257501ba/">HIRE ME</a>
              </div>
              <div class="half-width">
                 <img src="images/jhankar.png">
             </div>
              
+    </section>
+    <section class="dream-area">
+        <div class="half-width"> 
+            <img src="images/jhankar2.png" alt="">
+            
+        </div>
+        <div class="half-width"> 
+              <h2>Big Dream</h2>
+              <h3 class="orange-highlight">Become World's No: 1 Web Developer</h3>
+              <p>I already learned the basic html and css.I can bulid a simple website.I can even teach my hasband how to make simple website.My goal is to build 3 websiteand learn advanced topics
+              </p>
+              <a class="link-button" target="_blank" href="https://www.linkedin.com/in/ambia-kobir-1257501ba/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="exprience-area">
+        <h2>EXPRIENCES</h2>
+        <div id="full-stack" class="half-width single-exprience">
+              <h2>Full Stack Web Developer</h2>
+              <h3 class="orange-highlight">2022-Present|Pro Level Developer</h3>
+              <p>I am the master of HTML CSS JAVASCRIP.I know everything needed to make a website funtion, efficient.I did not the web.I went beyond with most populer javasript framework called vue js. i even know the deploymentserver and security . I will give you 100% web solution</p>
+        </div>
+        <div class="half-width single-exprience">
+          <h2>Baby Web Developer</h2>
+          <h3 class="orange-highlight">2022-2023present|Proggramming Hero Learner</h3>
+          <p>They didnot offer me a job.But I made myself as a remove web developer.I made thier website a showed it them. They liked it.And uploaded the content.It was fun workingat proggramming hero</p>
+        </div>
     </section>
 </body>
  
